# chatServer

./: README.md
V1.0/: CMakeLists.txt
V1.0/include/: public.hpp
V1.0/include/server/: chatserver.hpp  chatservice.hpp
V1.0/include/server/db/: db.hpp
V1.0/include/server/model/: friendmodel.hpp  groupmodel.hpp  groupuser.hpp  user.hpp  usermodel.hpp
V1.0/include/server/redis/: redis.hpp
V1.0/src/client/: cmake_install.cmake  main.cpp
V1.0/src/server/: chatserver.cpp  chatservice.cpp  main.cpp
V1.0/src/server/db/: db.cpp
V1.0/src/server/model/: friendmodel.cpp  groupmodel.cpp  offlinemessagemode.cpp  usermodel.cpp
V1.0/test/testmuduo/: CMakeLists.txt
V2.0/: aotubuild.sh
V2.0/include/: public.hpp
V2.0/include/server/: chatservice.hpp
V2.0/include/server/db/: commenConnectionPool.hpp  connection.hpp
V2.0/include/server/model/: friendmodel.hpp  group.hpp  groupmodel.hpp  offlinemessagemodel.hpp  usermodel.hpp
V2.0/include/server/redis/: redis.hpp
V2.0/src/client/: main.cpp
V2.0/src/server/: CMakeLists.txt  chatserver.cpp  chatservice.cpp  main.cpp
V2.0/src/server/db/: commenConnectionPool.cpp  connection.cpp  mysql.cnf
V2.0/src/server/model/: friendmodel.cpp  groupmodel.cpp  offlinemessagemode.cpp  usermodel.cpp
V2.0/src/server/redis/: redis.cpp
V2.0/test/testjosn/: testjosn  testjosn.cpp
V2.0/test/testmuduo/: testmuduo.cpp
V2.0/test/testredis/: testredis  testredis.cpp
